# NumericalMethods

./: .gitignore  CMakeLists.txt  README.md  scheme.drawio
include/: GaussSolver.h  JacobiSolver.h  LinearSolver.h  Matrix.h  QRSolver.h  RelaxationSolver.h  SLESolver.h  SeidelSolver.h  SimpleIterSolver.h  Type.h  TypeHolder.h  linearAlgebra.h
results/L1/: debug_res.txt  result1.txt  result3.txt  result5.txt
src/: GaussSolver.cpp  GaussSolver.h  JacobiSolver.cpp  JacobiSolver.h  LinearSolver.cpp  LinearSolver.h  Matrix.cpp  Matrix.h  MatrixDouble.cpp  NMLW.cpp  NMLW_classes.cpp  QRSolver.cpp  QRSolver.h  RelaxationSolver.cpp  RelaxationSolver.h  SLESolver.cpp  SimpleIterSolver.cpp  linearAlgebra.h  main.cpp
tests/L1/: debug_test.txt  dop_test1.txt  dop_test2.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
tests/L2/: dop_test1.txt  test1.txt  test2.txt  test3.txt  test5.txt
tmp/: GaussSolver.h  QRSolver.cpp  RelaxationSolver.cpp  RelaxationSolver.h  SLESolver.h
